k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployboard-backend
  namespace: deployboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployboard-backend
  template:
    metadata:
      labels:
        app: deployboard-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/kaan-yassibas/deployboard-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
