k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployboard-frontend
  namespace: deployboard
spec:
  type: ClusterIP
  selector:
    app: deployboard-frontend
  ports:
    - port: 80
      targetPort: 80
