k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployboard-ingress
  namespace: deployboard
spec:
  ingressClassName: traefik
  tls:
    - secretName: deployboard-tls-selfsigned
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: deployboard-backend
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: deployboard-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deployboard-frontend
                port:
                  number: 80
